# udonscript

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  build  codesearch  test_call_and_map.udon  test_call_only.udon  test_dd_debug.udon  test_dd_simpler.udon  test_map_only.udon  test_minimal_dd.udon
build_cmake/: CMakeCache.txt
doc/: README.md  builtins-reference.md  getting-started.md  language-spec.md  quick-reference.md
editor-plugins/emacs/: INSTALL.md  install.sh  udon-mode.el
editor-plugins/geany/: INSTALL.md  filetypes.UdonScript  install.sh
editor-plugins/jetbrains/: INSTALL.md  README.md  build.gradle  settings.gradle
editor-plugins/kate/: INSTALL.md  install.sh  udonscript.xml
editor-plugins/sublime/: INSTALL.md  UdonScript.sublime-syntax  install.sh
editor-plugins/vim/: INSTALL.md  install.sh
editor-plugins/vscode/: INSTALL.md  language-configuration.json  package.json
scripts/demo/: bayes_classifier.udon  context.udon  dd_character.udon  fern_udon.udon  ffi_math.udon  fibonacci.udon  jsx_demo.udon  l_system.udon  lights_show.udon  markov.txt  markov.udon  maze_generator.udon  roguelike_rooms.udon  test.udon  test_modifications.udon  wave_function_collapse.udon  word_freq.txt  word_freq.udon
scripts/testsuite/: 01_arithmetic.expected  01_arithmetic.udon  02_comparison.expected  02_comparison.udon  03_logical.expected  03_logical.udon  04_strings.expected  04_strings.udon  05_if_else.expected  05_if_else.udon  06_while_loop.expected  06_while_loop.udon  07_for_loop.expected  07_for_loop.udon  08_functions.expected  08_functions.udon  09_recursion.expected  09_recursion.udon  10_object_literals.expected  10_object_literals.udon  11_foreach.expected  11_foreach.udon  12_type_conversion.expected  12_type_conversion.udon  13_math_functions.expected  13_math_functions.udon  14_vectors.expected  14_vectors.udon  15_scoping.expected  15_scoping.udon  16_array_properties.expected  16_array_properties.udon  17_switch.expected  17_switch.udon  18_break.expected  18_break.udon  19_continue.expected  19_continue.udon  20_nested_loops.expected  20_nested_loops.udon  (+44 more)
src/core/: builtins.cpp  helpers.cpp  helpers.h  (+19 more)
tools/: format.sh
(+36 files in other folders)
